# t2t-tuner

./: .gitignore  README.md  download_11b.py  pyproject.toml  requirements.txt  setup.cfg
ds_config/: zero_3.json
examples/: deepspeed_test.py  gradient_checkpointing.ipynb  model_parallel.ipynb  soft_prompt_tuning.ipynb  tldr-gpt.ipynb  tldr.ipynb
examples/paraphrasing/: train.ipynb  trainlines.json  validlines.json
sample_data/: make_seq2seq_dataset.ipynb  make_txt_dataset.ipynb  validlines.json  validlines.txt
t2t/: __init__.py  arguments.py  t2t.py  utils.py
