[metadata]
name = t2t-tuner
version = 0.0.1
author = Timothy Liu
author_email = tlkh.xms@gmail.com
description = Convenient Text-to-Text Training for Transformers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlkh/t2t-tuner
project_urls =
    Bug Tracker = https://github.com/tlkh/t2t-tuner/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src