[metadata]
name = t2t-tuner
version = 0.0.8
author = Timothy Liu
author_email = tlkh.xms@gmail.com
description = Convenient Text-to-Text Training for Transformers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlkh/t2t-tuner
project_urls =
    Bug Tracker = https://github.com/tlkh/t2t-tuner/issues
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
install_requires =
    tqdm
    ipywidgets
    datasets
    sentencepiece
    sacrebleu>=1.5
    transformers
    pandas
    seaborn
